@@ -36,7 +36,6 @@
 	// Make sure that we are executed only in TYPO3 context
 if (!defined ("TYPO3_MODE")) die ("Access denied.");
 
-require_once t3lib_extMgm::extPath('t3sec_saltedpw').'res/lib/class.tx_t3secsaltedpw_phpass.php';
 
 /**
  * Plugin 'Website User Login' for the 'felogin' extension.
@@ -78,17 +77,24 @@ class ux_tx_felogin_pi1 extends tx_felogin_pi1	{
 				}
 
 					// Generate new password with salted md5 and save it in user record
-					// assumption: extension t3sec_saltedpw loaded
-				if ($GLOBALS['TYPO3_DB']->sql_num_rows($res)) {
-					$newPass = $this->generatePassword(8);
-					$objPHPass = t3lib_div::makeInstance('tx_t3secsaltedpw_phpass');
-					$saltedPass = $objPHPass->getHashedPassword($newPass);
-					$res = $GLOBALS['TYPO3_DB']->exec_UPDATEquery(
-						'fe_users',
-						'uid=' . $row['uid'],
-						array('password' => $saltedPass)
-					);
-					$msg = sprintf($this->pi_getLL('ll_forgot_email_password', '', 0),$this->piVars['forgot_email'], $row['username'], $newPass);
+					// assumption: extension t3sec_saltedpw loaded and is enabled for FE usage
+				if (t3lib_extMgm::isLoaded('t3sec_saltedpw')) {
+					require_once t3lib_extMgm::extPath('t3sec_saltedpw').'res/staticlib/class.tx_t3secsaltedpw_div.php';
+
+					if (tx_t3secsaltedpw_div::isUsageEnabled()
+							&& $GLOBALS['TYPO3_DB']->sql_num_rows($res)) {
+						require_once t3lib_extMgm::extPath('t3sec_saltedpw').'res/lib/class.tx_t3secsaltedpw_phpass.php';
+
+						$newPass = $this->generatePassword(8);
+						$objPHPass = t3lib_div::makeInstance('tx_t3secsaltedpw_phpass');
+						$saltedPass = $objPHPass->getHashedPassword($newPass);
+						$res = $GLOBALS['TYPO3_DB']->exec_UPDATEquery(
+							'fe_users',
+							'uid=' . $row['uid'],
+							array('password' => $saltedPass)
+						);
+						$msg = sprintf($this->pi_getLL('ll_forgot_email_password', '', 0),$this->piVars['forgot_email'], $row['username'], $newPass);
+					}
 				}
 
 				$this->cObj->sendNotifyEmail($msg, $this->piVars['forgot_email'], '', $this->conf['email_from'], $this->conf['email_fromName'], $this->conf['replyTo']);
